feat: avoid delete book if this has active reservations, and print error trace on loger.error
